Fix issues with border widths and spacing in headers

--- a/src/nationalarchives/components/global-header/global-header.scss
+++ b/src/nationalarchives/components/global-header/global-header.scss
@@ -191,7 +191,7 @@
 
     @include typography.font-size(17);
 
-    @include colour.colour-border("keyline", 0.5px, solid, bottom);
+    @include colour.colour-border("keyline", 1px, solid, bottom);
 
     &,
     &:link,
