--- a/src/nationalarchives/ie.scss
+++ b/src/nationalarchives/ie.scss
@@ -80,7 +80,7 @@ summary {
 }
 
 .tna-global-header__navigation-item-link {
-  border-bottom: 0.5px rgba(255, 255, 255, 0.5) solid;
+  border-bottom: 1px rgba(255, 255, 255, 0.5) solid;
 }
 
 @include media.on-larger-than-mobile {
